docs: Github README에 스크린샷 추가